# frc-2017

./: .gitmodules  CMakeLists.txt  Doxyfile.in  README.md  deploy  deploy.sh  deploy_test  install.sh  netconsole  newdeploy.sh  newinstall.sh  toolchain.cmake  update_variables.sh
roborio_setup/: roborio_setup  test  usage.md
src/: Hardware.cpp  Hardware.h  ManualPID.h  Reference.cpp  Reference.h  Robot.cpp  Robot.h  RobotInit.h  main.cpp  make_robot_loop.h  robot_state.h  variables.json  view.h
src/CowLib/: CowAlphaNum.java  CowCircularBuffer.cpp  CowCircularBuffer.h  CowGyro.cpp  CowGyro.h  CowGyro.java  Declarations.h
src/actions/: DriveAction.h  GearmechAction.h  GenericAction.h  Routine.cpp  Routine.h
src/auto_commands/: DoNothingCommand.h  DriveCommand.h  GearmechCommand.h  GenericCommand.h  Routine.cpp  Routine.h  TurnCommand.h
src/autocommands/: AutoRoutine.h  AutoRoutines.h  CenterRoutine.cpp  CenterRoutine.h  DeliverGearCenterCommand.h  DeliverGearCommand.h  DoNothingCommand.cpp  DoNothingCommand.h  DriveDistanceCommand.cpp  DriveDistanceCommand.h  DriveStraightCommand.cpp  DriveStraightCommand.h  GenericAutoCommand.h  GenericCommand.h  IntakeMoveCommand.h  IntakeSetpointCommand.h  LeftRoutine.cpp  LeftRoutine.h  MoveGearmechCommand.cpp  MoveGearmechCommand.h  NullCommand.cpp  NullCommand.h  RightRoutine.cpp  RightRoutine.h  Routine.cpp  Routine.h  TurnCommand.cpp  TurnCommand.h  WaitTimeCommand.cpp  WaitTimeCommand.h
src/controllers/: AutoController.cpp  AutoController.h  GenericController.h  OperatorController.cpp  OperatorController.h  TeleopController.cpp  TeleopController.h
src/subsystems/: Angle.cpp  Angle.h  Climber.cpp  Climber.h  CowGyroPID.cpp  CowGyroPID.h  DriveTrain.cpp  DriveTrain.h  Drivetrain.cpp  Drivetrain.h  Encoders.cpp  Encoders.h  GearMech.cpp  GearMech.h  Gearmech.cpp  Gearmech.h  HandlePID.h  JoySticks.cpp  JoySticks.h  Joysticks.cpp  Joysticks.h  LED.cpp  LED.h  ManualPID.h  PID.cpp  PID.h  PIDHandle.cpp  PIDHandle.h  Subsystems.cpp  Subsystems.h  Subsytems.h
test/: CMakeLists.txt
(+10 files in other folders)
